// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameScreen render correctly with count 0 1`] = `
<div
  className="game__mistakes"
/>
`;

exports[`GameScreen render correctly with count 1 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;
